Update subject class assigments loginf to accomodate class assignments history
